--- a/회의록.md
+++ b/회의록.md
@@ -6,3 +6,24 @@
 * 개발 목표 (구체적인 개발 목표 설정)
 
 ---
+
+### 2020.04.09 (목)
+
+* 수의사 찾는중 다음주 중으로 교수님이 미팅 예정
+* 구체적인 활동들 정의해야하고, 역할을 나눠야 함.
+* 프로시져 그리기
+* DB Schema 그리기
+* 사람쪽에서는 어떻게 서비스가 되고 있는지 알아야함. 서버에서 어떤식으로 분석하는지.
+   
+* 안드로이드
+  - 동물 데이터 저장 등을 어떻게 관리하고 구성할것인지. 
+* 청진기도 어떤점이 좋아서 사용할것인가.
+* 기업 링크	
+  * [우리가 나아가려는 방향과 비슷한 기업 링크](https://mypetlife.co.kr/26776/).
+* 타겟을 잡고 더 기능을 추가하면 됨. 
+* 논문, 특허들 요약 A4 한장 분량
+* 회사 사이트 요약.
+* 사람한테 서비스되고 있는 내용들은 어떤 것이 있는가?
+
+---
+
