--- a/개발환경.md
+++ b/개발환경.md
@@ -2,8 +2,8 @@
 
 ### Server
     AWS EC2 Ubuntu 18.04 LTS
-    SpringBoot Framework 2.2.2.RELEASE
-    JDK 8
+    django Framework 3.0.5 RELEASE
+    Python3
     
 ### DataBase
     PostgreSQL 12.1
