--- a/회의록.md
+++ b/회의록.md
@@ -20,7 +20,8 @@
    * 로그인, 회원가입, 심음분석이 1차 목표. 
 * [x] __DB Schema 그리기__
 * [ ] __사람쪽에서는 어떻게 서비스가 되고 있는지 알아야함. 서버에서 어떤식으로 분석하는지__
-* [ ] __회사 사이트 요약__
+* [x] __회사 사이트 요약__
+  * [Felcana](https://felcana.com/)
 
 * __안드로이드__
   - [ ] 동물 데이터 저장 등을 어떻게 관리하고 구성할것인지.
@@ -28,11 +29,24 @@
   * [우리가 나아가려는 방향과 비슷한 기업 링크](https://mypetlife.co.kr/26776/).
 
 * __논문, 특허들 요약 A4 한장 분량__
-   * [ ] 논문 요약 (명근)
+   * [x] 논문 요약 (명근)
    * [x] 특허 요약 (영조)
 
 * ~프로시져 그리기~
 
 ---
 
-+
+### 2020.04.15 (수) 🐶
+
+* [ ]__심음 분석을 통해서 어떤 부분까지 개발이 되어있는지 파악해야함 (논문)__
+   - 사람한테 적용된 사례
+   - 이미 논문이 있는건지
+
+* [x]__데이터베이스 스키마 구조 체크__
+   - 구분자의 구조 관련 (구분자->일련번호) 
+
+* [ ]__다음주부터 각 파트별 개발 시작할 것__
+
+* [ ]__금요일 미팅에서 질문하고 싶은 내용 정리__
+  * 
+
