--- a/개발환경.md
+++ b/개발환경.md
@@ -1,9 +1,10 @@
 # 개발환경
 
 ### Server
-    AWS EC2 Ubuntu 18.04 LTS
+    Ubuntu 18.04 LTS
     django Framework 3.0.5 RELEASE
     Python3
+    Jenkins
     
 ### DataBase
     PostgreSQL 12.1
