--- a/회의록.md
+++ b/회의록.md
@@ -19,12 +19,12 @@
 * [x] __구체적인 활동 정의 및 목표 설정__
    * 로그인, 회원가입, 심음분석이 1차 목표. 
 * [x] __DB Schema 그리기__
-* [ ] __사람쪽에서는 어떻게 서비스가 되고 있는지 알아야함. 서버에서 어떤식으로 분석하는지__
+* [x] __사람쪽에서는 어떻게 서비스가 되고 있는지 알아야함. 서버에서 어떤식으로 분석하는지__
 * [x] __회사 사이트 요약__
   * [Felcana](https://felcana.com/)
 
 * __안드로이드__
-  - [ ] 동물 데이터 저장 등을 어떻게 관리하고 구성할것인지.
+  - [x] 동물 데이터 저장 등을 어떻게 관리하고 구성할것인지.
 * __기업 링크__
   * [우리가 나아가려는 방향과 비슷한 기업 링크](https://mypetlife.co.kr/26776/).
 
