--- a/회의록.md
+++ b/회의록.md
@@ -54,3 +54,34 @@
 
 ---
 
+### 2020.04.22 (수) 🐶
+
+#### 안드로이드
+- [x] 기본 UI
+- [x] 인트로, 로그인, 메인 페이지
+- [x] 메인 페이지는 drawerlayout 사용
+- [x] 녹음 기능까지 구현
+  - audioRecorder 라이브러리 활용   
+- 파일을 저장할때 정보도 같이 저장할 것
+  - Sqlite를 사용하여 내부저장소에 저장
+ 
+#### 서버
+- [x] 회원가입, 로그인 API 까지 구현
+- [ ] 매주 특허 1개, 논문 1개씩 분석
+  - 기존 논문과의 차별성을 찾아서 그 부분을 집중적으로 발표
+  
+--- 
+  
+### 다음주 계획
+
+#### 안드로이드
+- [ ] 음성 파형 출력
+- [ ] 회원가입 및 로그인 기능구현
+
+#### 서버
+- [ ] CI/CD 구현 (Jenkins or Trivis 사용)
+- [ ] 강아지 관리 API 구현
+- [ ] 서버에 올려서 테스트
+
+--- 
+
