--- a/회의록.md
+++ b/회의록.md
@@ -83,3 +83,7 @@
 
 --- 
 
+### 2020.04.29 (수) 🐶
+- [ ] 사업자 등록
+
+ ![image](https://user-images.githubusercontent.com/50908416/80555466-4c717a00-8a0b-11ea-86ea-9541de81f0f1.png)
