--- a/회의록.md
+++ b/회의록.md
@@ -73,13 +73,13 @@
 ### 다음주 계획
 
 #### 안드로이드
-- [ ] 음성 파형 출력
+- [x] 음성 파형 출력
 - [ ] 회원가입 및 로그인 기능구현
 
 #### 서버
-- [ ] CI/CD 구현 (Jenkins or Trivis 사용)
+- [x] CI/CD 구현 (Jenkins or Trivis 사용)
 - [ ] 강아지 관리 API 구현
-- [ ] 서버에 올려서 테스트
+- [x] 서버에 올려서 테스트
 
 --- 
 
