--- a/회의록.md
+++ b/회의록.md
@@ -67,7 +67,7 @@
  
 #### 서버
 - [x] 회원가입, 로그인 API 까지 구현
-- [ ] 매주 특허 1개, 논문 1개씩 분석
+- [x] 매주 특허 1개, 논문 1개씩 분석
   - 기존 논문과의 차별성을 찾아서 그 부분을 집중적으로 발표
     
 ### 다음주 계획
@@ -78,7 +78,8 @@
 
 #### 서버
 - [x] CI/CD 구현 (Jenkins or Trivis 사용)
-- [ ] 강아지 관리 API 구현
+- [x] 강아지 관리 API 구현
+  * 총 API 50% 구현 완료
 - [x] 서버에 올려서 테스트
 
 --- 
