--- a/회의록.md
+++ b/회의록.md
@@ -95,3 +95,7 @@
 - 결과 로그 출력 방법
   - 서버에서 계산을 끝내고 난 뒤, 결과와 정제된 오디오 파일을 안드로이드로 전송하면, 그 결과를 핸드폰에 저장해 로그를 볼 수 있는 방법으로 수정
   - 머신러닝 진행 방법 
+  
+### 2020.05.05 (화)
+![image](https://user-images.githubusercontent.com/50908416/81131297-a4692d00-8f85-11ea-9aef-9957027a91b2.png)
+
