--- a/회의록.md
+++ b/회의록.md
@@ -98,4 +98,5 @@
   
 ### 2020.05.05 (화)
 ![image](https://user-images.githubusercontent.com/50908416/81131297-a4692d00-8f85-11ea-9aef-9957027a91b2.png)
+![image](https://user-images.githubusercontent.com/50908416/81131338-ccf12700-8f85-11ea-825c-09fad78ae26d.png)
 
