--- a/회의록.md
+++ b/회의록.md
@@ -106,3 +106,8 @@
 
 ### 2020.05.13 (수) 🐶
 ![image](https://user-images.githubusercontent.com/50908416/81762391-76e12e00-9507-11ea-80cd-a7dc254deb83.png)
+
+--- 
+
+### 2020.05.20 (수) 🐶
+![image](https://user-images.githubusercontent.com/50908416/82395592-cc2cba80-9a86-11ea-8a59-8c97d7454946.png)
