--- a/회의록.md
+++ b/회의록.md
@@ -112,3 +112,5 @@
 ### 2020.05.20 (수) 🐶
 ![image](https://user-images.githubusercontent.com/50908416/82395732-1b72eb00-9a87-11ea-85a0-96a4a86d921e.png)
 
+### 2020.05.27 (수) 🐶
+![image](https://user-images.githubusercontent.com/50908416/83541311-75b68600-a534-11ea-8e85-7e1897482b96.png)
