--- a/회의록.md
+++ b/회의록.md
@@ -114,3 +114,6 @@
 
 ### 2020.05.27 (수) 🐶
 ![image](https://user-images.githubusercontent.com/50908416/83541311-75b68600-a534-11ea-8e85-7e1897482b96.png)
+
+### 2020.06.03 (수) 🐶
+![image](https://user-images.githubusercontent.com/50908416/83585560-1af94a80-a585-11ea-9606-49ab1c62cfad.png)
