--- a/회의록.md
+++ b/회의록.md
@@ -121,3 +121,9 @@
 
 ### 2020.06.03 (수) 🐶
 ![image](https://user-images.githubusercontent.com/50908416/83585560-1af94a80-a585-11ea-9606-49ab1c62cfad.png)
+
+---
+
+### 2020.06.10 (수) 🐶
+![image](https://user-images.githubusercontent.com/50908416/84216468-95d1e080-ab04-11ea-95ce-8085b6df7104.png)
+
